--- a/resources/sass/htmlElements.scss
+++ b/resources/sass/htmlElements.scss
@@ -78,6 +78,7 @@ header, footer {
             color: $white;
 
         }
+
     }
 }
 button {
@@ -85,4 +86,7 @@ button {
 }
 hr {
     border: 1px solid #ad9797;
+}
+form{
+    padding: 50px 0;
 }
