--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -16,6 +16,8 @@
 @import "~admin-lte/dist/css/AdminLTE.min.css";
 @import "~admin-lte/dist/css/skins/_all-skins.min.css";
 
+@import '~sweetalert2/src/sweetalert2.scss';
+
 
 @import "slick";
 @import "mixin";
