created crud for products

--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -24,3 +24,49 @@ $brown: #503737;
 $white: #ffffff;
 $grey: #777777;
 $greyDarken: #444444;
+
+.blue{
+    color:$blue;
+}
+.indigo{
+    color:$indigo;
+}
+.purple{
+    color:$purple;
+}
+.pink{
+    color:$pink;
+}
+.orange{
+    color:$orange;
+}
+.yellow{
+    color:$yellow;
+}
+.green{
+    color:$green;
+}
+.teal{
+    color:$teal;
+}
+.cyan{
+    color:$cyan;
+}
+.golden{
+    color:$golden;
+}
+.red{
+    color:$red;
+}
+.brown{
+    color:$brown;
+}
+.white{
+    color:$white;
+}
+.grey{
+    color:$grey;
+}
+.greyDarken{
+    color:$greyDarken;
+}
