--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -132,11 +132,54 @@ header {
         border-top: 1px solid #d9d9d9;
         border-bottom: 2px solid $red;
         padding: 25px 0;
-
+        position: relative;
         li {
             a {
                 color: $brown;
                 font-size: 17px;
+            }
+        }
+        #categories-items{
+            position: absolute;
+            top: 54px;
+            z-index: 999;
+            display: none;
+            flex-direction: column;
+            align-items: center;
+            padding: 35px 100px ;
+            background: #fff;
+            .triangle-red{
+                border: 20px solid transparent;
+                border-bottom: 20px solid $red;
+                position: absolute;
+                top: -40px;
+                left:85px;
+            }
+            .triangle{
+                border: 20px solid transparent;
+                border-bottom: 20px solid white;
+                position: absolute;
+                top: -38px;
+                left:85px;
+            }
+            .categories-item{
+                margin: 0 15px;
+            }
+            .border{
+                height: 35px;
+                width: 100%;
+                position: absolute;
+                top: -35px;
+                z-index: 999;
+                border: none !important;
+            }
+        }
+        #categoriesShow a{
+            padding: 3px 10px;
+            border-radius: 50px;
+            &:hover{
+                background: $red;
+                color:white;
             }
         }
     }
