--- a/public/css/app.css
+++ b/public/css/app.css
@@ -19370,3 +19370,33 @@ footer .pages table td {
   height: 5px !important;
 }
 
+.feedbacks-title h1 {
+  color: #503737;
+  text-align: center;
+}
+
+.feedback {
+  border: 4px solid #af9559;
+  padding: 10px;
+  margin-bottom: 20px;
+}
+
+.feedback .feedback-username h5 {
+  font-size: 20px;
+  margin-bottom: 0;
+}
+
+.feedback p {
+  text-decoration: none;
+  text-transform: none;
+}
+
+.likes i {
+  margin-right: 15px;
+  font-size: 20px;
+}
+
+.cursor-pointer {
+  cursor: pointer;
+}
+
