--- a/public/css/app.css
+++ b/public/css/app.css
@@ -393,6 +393,10 @@
   color: #444444;
 }
 
+.lightred {
+  color: #e23e3d;
+}
+
 /*!
  * Bootstrap v4.3.1 (https://getbootstrap.com/)
  * Copyright 2011-2019 The Bootstrap Authors
@@ -19392,8 +19396,13 @@ footer .pages table td {
 }
 
 .likes i {
-  margin-right: 15px;
+  margin-right: 5px;
   font-size: 20px;
+}
+
+.likes div {
+  display: flex;
+  margin-right: 20px;
 }
 
 .cursor-pointer {
