--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -17,6 +17,7 @@ $yellow: #ffed4a;
 $green: #38c172;
 $teal: #4dc0b5;
 $cyan: #6cb2eb;
+$lightred: #e23e3d;
 
 $golden: #af9559;
 $red: #ed1c24;
@@ -69,4 +70,7 @@ $greyDarken: #444444;
 }
 .greyDarken{
     color:$greyDarken;
+}
+.lightred{
+    color:$lightred;
 }
